--- a/profile.html
+++ b/profile.html
@@ -6,6 +6,7 @@
     <meta name="description" content="Blood donation platform connecting donors with recipients">
     <meta name="keywords" content="blood donation, donate blood, blood request, save lives">
     <title>{% block title %}{% endblock %} | Blood Donation Network</title><title>Donor Profile</title>
+    <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="{{ url_for('static', filename='profile.css') }}">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
