--- a/admin.html
+++ b/admin.html
@@ -6,6 +6,7 @@
     <meta name="description" content="Blood donation platform connecting donors with recipients">
     <meta name="keywords" content="blood donation, donate blood, blood request, save lives">
     <title>{% block title %}{% endblock %} | Blood Donation Network</title>
+    <link rel="stylesheet" href="style.css">
     <title>Admin Dashboard</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='/admin.css') }}">
 </head>
