--- a/admin_dashboard.html
+++ b/admin_dashboard.html
@@ -8,6 +8,7 @@
     <title>{% block title %}{% endblock %} | Blood Donation Network</title>
 
     <title>Admin Dashboard</title>
+    <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="{{ url_for('static', filename='admin_dashboard.css') }}">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
 </head>
